@@ -18,8 +18,8 @@ recursive_author_tests('xt');
 requires 'Acme::CPANAuthors' => 0;
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Acme-CPANAuthors-Czech';
-resources 'homepage' => 'https://github.com/tupinek/Acme-CPANAuthors-Czech';
-resources 'repository' => 'git://github.com/tupinek/Acme-CPANAuthors-Czech';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Acme-CPANAuthors-Czech';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Acme-CPANAuthors-Czech';
 test_requires 'Test::NoWarnings' => 0;
 test_requires 'Test::More' => 0;
 tests_recursive;
