@@ -1,4 +1,5 @@
 0.24
+ - Update author github username.
 
 0.23 2020-02-28T20:30:57+01:00
  - Add HOLCAPEK CPAN account.
